// @file Defines the relational data model, constraints, indexes, and generated Prisma client.
generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["postgresqlExtensions"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  STUDENT
  MODERATOR
  ADMIN
}

enum ReviewStatus {
  PENDING
  APPROVED
  REJECTED
  HIDDEN
}

enum ReportStatus {
  PENDING
  RESOLVED
  DISMISSED
}

enum CourseSemester {
  SEMESTER_1
  SEMESTER_2
  SUMMER
}

enum AssessmentType {
  EXAM
  ASSIGNMENT
  QUIZ
  PROJECT
  LAB
  PRESENTATION
}

enum AssessmentStyle {
  EXAM_HEAVY
  COURSEWORK_HEAVY
  PROJECT_BASED
  PRACTICAL
  BALANCED
}

model User {
  // Basic information
  id                  Int      @id @default(autoincrement())
  email               String   @unique
  passwordHash        String
  name                String
  role                UserRole @default(STUDENT)
  major               String?
  studyYear           Int?
  interests           String[] @default([])
  goals               String[] @default([])
  planningPreferences Json?

  // Password reset
  resetCode        String?
  resetCodeExpires DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  reviews          Review[]
  reviewReports    ReviewReport[]
  savedCourses     SavedCourse[]
  semesterPlans    SemesterPlan[]
  completedCourses CompletedCourse[]
  notifications    Notification[]
}

model Course {
  id               Int              @id @default(autoincrement())
  name             String
  code             String           @unique
  description      String?
  credits          Int
  workloadHours    Int?
  offeredSemesters CourseSemester[] @default([])
  level            Int?
  assessmentTypes  AssessmentType[] @default([])
  officialLink     String?
  subjectId        Int?
  subject          Subject?          @relation(fields: [subjectId], references: [id], onDelete: Restrict)
  isActive         Boolean          @default(true)
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt

  // 1024-dimensional vector field generated by SiliconFlow BAAI/bge-m3 embeddings.
  embedding Unsupported("vector(1024)")?

  prerequisites   Course[] @relation("CoursePrerequisites")
  prerequisiteFor Course[] @relation("CoursePrerequisites")

  reviews      Review[]
  savedCourses SavedCourse[]
  planCourses  PlanCourse[]
  completedBy  CompletedCourse[]

  @@index([level])
  @@index([name])
  @@index([isActive])
  @@index([subjectId])
}

model Subject {
  id        Int      @id @default(autoincrement())
  code      String   @unique
  name      String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  courses Course[]
}

model Review {
  id               Int              @id @default(autoincrement())
  userId           Int
  courseId         Int
  overallRating    Int
  difficultyRating Int
  workloadRating   Int
  teachingRating   Int?
  assessmentStyle  AssessmentStyle?
  usefulnessRating Int?
  comment          String?
  status           ReviewStatus     @default(PENDING)
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt

  user    User           @relation(fields: [userId], references: [id])
  course  Course         @relation(fields: [courseId], references: [id])
  reports ReviewReport[]

  @@unique([userId, courseId])
  @@index([courseId, status])
}

model ReviewReport {
  id         Int          @id @default(autoincrement())
  reviewId   Int
  reporterId Int
  reason     String
  status     ReportStatus @default(PENDING)
  createdAt  DateTime     @default(now())

  review   Review @relation(fields: [reviewId], references: [id], onDelete: Cascade)
  reporter User   @relation(fields: [reporterId], references: [id], onDelete: Cascade)

  @@unique([reviewId, reporterId])
  @@index([status])
}

model SavedCourse {
  userId    Int
  courseId  Int
  createdAt DateTime @default(now())

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  course Course @relation(fields: [courseId], references: [id], onDelete: Cascade)

  @@id([userId, courseId])
}

model CompletedCourse {
  userId      Int
  courseId    Int
  completedAt DateTime?

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  course Course @relation(fields: [courseId], references: [id], onDelete: Restrict)

  @@id([userId, courseId])
  @@index([courseId])
}

model SemesterPlan {
  id        Int      @id @default(autoincrement())
  userId    Int
  name      String
  year      Int
  semester  String
  createdAt DateTime @default(now())

  user        User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  planCourses PlanCourse[]

  @@unique([userId, year, semester, name])
  @@index([userId, year, semester])
}

model PlanCourse {
  planId   Int
  courseId Int

  plan   SemesterPlan @relation(fields: [planId], references: [id], onDelete: Cascade)
  course Course       @relation(fields: [courseId], references: [id])

  @@id([planId, courseId])
}

model Notification {
  id        Int       @id @default(autoincrement())
  userId    Int
  type      String
  title     String
  message   String
  readAt    DateTime?
  createdAt DateTime  @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, readAt])
  @@index([createdAt])
}
